tests/ui/issues/issue-4517.stderr
error[E0308]: mismatched types
  --> $DIR/issue-4517.rs:5:9
   |
LL |     bar(foo);
   |     --- ^^^ expected `usize`, found `[u8; 4]`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/issue-4517.rs:1:4
   |
LL | fn bar(int_param: usize) {}
   |    ^^^ ----------------

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
