tests/ui/issues/issue-4517.rs
fn bar(int_param: usize) {}

fn main() {
    let foo: [u8; 4] = [1; 4];
    bar(foo);
    //~^ ERROR mismatched types
    //~| expected `usize`, found `[u8; 4]`
}
